# crypto-on-the-edge

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
benches/: Cargo.toml
benches/src/: key_manager.rs
example/: Cargo.toml  README.md
example/src/: client_side.rs  main.rs
init_boxed/: Cargo.toml
init_boxed/src/: lib.rs
key_manager/: Cargo.toml  build.rs
key_manager/protos/: server_client_ecdh_ecdsa_mode.proto
key_manager/src/: error.rs  lib.rs  macros.rs  prelude.rs  request.rs  response.rs  utils.rs
key_manager/src/server_client_ecdh_ecdsa_mode/: key_manager.rs  mod.rs
private_key_generator/: Cargo.toml  README.md  lib.rs
private_key_generator/src/: error.rs  id.rs  key_generator.rs  lib.rs  traits.rs  utils.rs
private_key_generator/tests/: compile_tests.rs
private_key_generator/tests/compile_fails/: id_length_too_small.rs  id_length_too_small.stderr  timestamp_bits_too_large.rs  timestamp_bits_too_large.stderr  timestamp_imprecision_too_large.rs  timestamp_imprecision_too_large.stderr  timestamp_imprecision_too_large_1.rs  timestamp_imprecision_too_large_1.stderr  timestamp_imprecision_too_large_2.rs  timestamp_imprecision_too_large_2.stderr  version_bits_too_large.rs  version_bits_too_large.stderr  version_lifetime_too_short.rs  version_lifetime_too_short.stderr
private_key_generator/tests/compile_passes/: id_length_at_minimum.rs  parameters_at_max_bounds.rs  parameters_at_min_bounds.rs
protobuf_messages/: Cargo.toml  build.rs
protobuf_messages/src/protos/: response.proto
stack_sanitizer/: Cargo.toml  README.md
stack_sanitizer/src/: lib.rs
stack_sanitizer/tests/: example.rs  stack_sanitization.rs
