[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
http_private_key_manager = { path = "../key_manager" }
secrecy = "0.8.0"
#p384 = { version = "0.14.0-pre.0" }
sha2 = { version = "0.11.0-pre.0" }
