[package]
name = "http_private_key_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.5", features = ["alloc"] }
#aead = { version = "0.6.0-pre.0", features = ["alloc"] }
base64 = "0.22.0"
private_key_generator = { path = "../private_key_generator" }
prost = "0.12.3"
rand_core = { version = "0.6", features = ["getrandom"]}

[features]
zeroize = ["private_key_generator/zeroize"]