[package]
name = "http_private_key_manager"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.5", features = ["alloc"] }
#aead = { version = "0.6.0-pre.0", features = ["alloc"] }
base64 = "0.22.0"
private_key_generator = { path = "../private_key_generator" }
prost = "0.12.3"
rand_core = { version = "0.9.0-alpha.1", features = ["getrandom"]}
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
chacha20poly1305 = "0.10"
p384 = { git = "https://github.com/RustCrypto/elliptic-curves.git", branch = "master", package = "p384", version = "0.14.0-pre", features = ["jwk", "ecdsa"]  }
rand_core_previous = { version = "0.6", features = ["getrandom"], package = "rand_core"}
sha2 = "0.11.0-pre.3"

[features]
logging = ["tracing"]
zeroize = ["private_key_generator/zeroize"]
